# solis-inverter-datalogger

./: .gitignore  Makefile  README.md  config.yaml  defaults_config.yaml  pyproject.toml  registers.json  solis_modbus.yaml
src/: config.py  inverter.py  main.py  solis2mqtt.py
